--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.nevermindsoft</groupId>
     <artifactId>kiln-adaptor-java</artifactId>
-    <version>1.3</version>
+    <version>1.3-SNAPSHOT</version>
 
     <name>KILN Log4j Adaptor</name>
     <description>Adaptor for the KILN logging service</description>
@@ -117,6 +117,11 @@
             <name>Nexus Staging Repository</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
-    </distributionManagement>
+<!--         <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Nexus Staging Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+ -->    </distributionManagement>
 
 </project>
