--- a/pom.xml
+++ b/pom.xml
@@ -108,20 +108,23 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
     <distributionManagement>
+<!--
         <repository>
             <id>sonatype-nexus-staging</id>
             <name>Nexus Staging Repository</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
-<!--         <repository>
+ -->
+        <repository>
             <id>sonatype-nexus-snapshots</id>
             <name>Nexus Staging Repository</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </repository>
- -->    </distributionManagement>
+    </distributionManagement>
 
 </project>
