--- a/release.properties
+++ b/release.properties
@@ -1,7 +1,14 @@
 #release configuration
-#Mon Dec 24 11:31:07 EST 2012
-preparationGoals=clean verify
-scm.commentPrefix=[maven-release-plugin] 
-remoteTagging=true
-completedPhase=check-poms
+#Mon Dec 24 11:32:15 EST 2012
+project.scm.com.nevermindsoft\:kiln-adaptor-java.connection=scm\:git\:git@github.com\:rcracel/kiln-java-adaptor.git
+project.scm.com.nevermindsoft\:kiln-adaptor-java.tag=HEAD
+scm.tag=kiln-adaptor-java-1.4
+project.dev.com.nevermindsoft\:kiln-adaptor-java=1.5-SNAPSHOT
+project.scm.com.nevermindsoft\:kiln-adaptor-java.url=https\://github.com/rcracel/kiln-java-adaptor
+project.rel.com.nevermindsoft\:kiln-adaptor-java=1.4
 scm.url=scm\:git\:git@github.com\:rcracel/kiln-java-adaptor.git
+preparationGoals=clean verify
+remoteTagging=true
+scm.commentPrefix=[maven-release-plugin] 
+completedPhase=end-release
+project.scm.com.nevermindsoft\:kiln-adaptor-java.developerConnection=scm\:git\:git@github.com\:rcracel/kiln-java-adaptor.git
