fixing issue with mock server not sending proper response

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -5,10 +5,11 @@ log4j.appender.kiln=com.nevermindsoft.kiln.log4j.RemoteServiceAppender
 log4j.appender.kiln.moduleName=Internal Testing
 log4j.appender.kiln.apiKey=TEST-API-KEY
 log4j.appender.kiln.environmentName=Test
-log4j.appender.kiln.serverUrl=http://localhost:2332/api/events/publish
+log4j.appender.kiln.serverUrl=http://localhost:4444/api/events/publish
 log4j.appender.kiln.maxRequestItems=200
-log4j.appender.kiln.sleepTime=5000
+log4j.appender.kiln.sleepTime=2000
 log4j.appender.kiln.platform=JUnit
+log4j.appender.kiln.maxQueueSize=10
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
