adding option for max stack trace size

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -10,6 +10,7 @@ log4j.appender.kiln.maxRequestItems=200
 log4j.appender.kiln.sleepTime=2000
 log4j.appender.kiln.platform=JUnit
 log4j.appender.kiln.maxQueueSize=10
+log4j.appender.kiln.maxStackTraceSize=26
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
